workspace(name = "examples")

load(":examples_repositories.bzl", "repositories")

repositories()

load(":examples_deps.bzl", "deps")

deps()

load(":examples_transitive_deps.bzl", "transitive_deps")

transitive_deps()

load(":examples_transitive_deps_final.bzl", "transitive_deps_final")

transitive_deps_final()
