[package]
name = "crate_graph"
version = "0.1.0"
authors = ["UebelAndre <github@uebelandre.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
cargo_metadata = "0.13.1"
cargo_toml = "0.9.1"
cargo-lock = "6.0.0"
cargo-platform = "0.1.1"
cfg-expr = "0.7.4"
itertools = "0.10"
pathdiff = "0.2.0"
semver = { version = "0.11.0", features = ["serde"] }
serde = { version = "1.0.126", features = ["derive"] }
slug = "0.1.4"
spdx = "0.4.0"
toml = "0.5.6"

[dev-dependencies]
indoc = "1.0.3"
tempfile = "3.2.0"
tera = "1.10.0"
serde_json = "1.0.64"
