load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@bazel_skylib//rules:common_settings.bzl", "string_flag")
load(":defs.bzl", "rust_wasm_bindgen_toolchain")

package(default_visibility = ["//visibility:public"])

exports_files([
    "defs.bzl",
])

toolchain_type(
    name = "toolchain_type",
)

string_flag(
    name = "test_browser",
    build_setting_default = "firefox",
    values = [
        "firefox",
        "chrome",
    ],
)

bzl_library(
    name = "bzl_lib",
    srcs = glob(["**/*.bzl"]),
    deps = [
        "//3rdparty:bzl_lib",
        "//private:bzl_lib",
    ],
)

rust_wasm_bindgen_toolchain(
    name = "default_wasm_bindgen_toolchain_impl",
    wasm_bindgen_cli = "//3rdparty:wasm_bindgen_cli",
    wasm_bindgen_test = "//3rdparty:wasm_bindgen_test",
    webdriver = "@geckodriver",
)

toolchain(
    name = "default_wasm_bindgen_toolchain",
    toolchain = "default_wasm_bindgen_toolchain_impl",
    toolchain_type = ":toolchain_type",
)
