load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load(":platform.bzl", "declare_config_settings")

package(default_visibility = ["//visibility:public"])

toolchain_type(
    name = "toolchain_type",
)

declare_config_settings()

package_group(
    name = "function_transition_allowlist",
    packages = [
        "//...",
    ],
)

bzl_library(
    name = "rules",
    srcs = glob(["**/*.bzl"]),
    visibility = ["//rust:__subpackages__"],
)
