load("//rust:defs.bzl", "rust_library", "rust_test")

exports_files([
    "label.rs",
    "label_error.rs",
    "Cargo.toml",
])

filegroup(
    name = "rust_srcs",
    srcs = [
        "label.rs",
        "label_error.rs",
        "Cargo.toml",
    ],
    visibility = ["//:__subpackages__"],
)

rust_library(
    name = "label",
    srcs = [
        "label.rs",
        "label_error.rs",
    ],
    crate_name = "bazel_label",
    edition = "2021",
    visibility = ["//:__subpackages__"],
    version = "0.1.0",
)

rust_test(
    name = "label_test",
    crate = ":label",
)
