# buildifier: disable=bzl-visibility
load("//rust/private:rust.bzl", "rust_binary_without_process_wrapper", "rust_library_without_process_wrapper", "rust_test_without_process_wrapper_test")
load("//util/process_wrapper/private:bootstrap_process_wrapper.bzl", "bootstrap_process_wrapper")

_STRIP_FLAGS = select({
    "@platforms//os:linux": ["-Cstrip=debuginfo"],
    "@platforms//os:macos": ["-Cstrip=symbols"],
    "@platforms//os:windows": ["-Cstrip=debuginfo"],
    "//conditions:default": [],
})

rust_library_without_process_wrapper(
    name = "process_wrapper_lib",
    srcs = [
        "flags.rs",
        "lib.rs",
        "options.rs",
        "output.rs",
        "rustc.rs",
        "util.rs",
    ],
    allocator_libraries = "@rules_rust//ffi/rs:empty_allocator_libraries",
    crate_name = "process_wrapper",
    edition = "2018",
    rustc_flags = _STRIP_FLAGS,
    visibility = ["//util/rustc_worker:__pkg__"],
    deps = [
        "@rules_rust_tinyjson//:tinyjson",
    ],
)

rust_binary_without_process_wrapper(
    name = "process_wrapper",
    srcs = ["main.rs"],
    allocator_libraries = select({
        "@rules_rust//rust/settings:experimental_use_allocator_libraries_with_mangled_symbols_on": "@rules_rust//ffi/rs:allocator_libraries_with_mangling_support_without_process_wrapper",
        "//conditions:default": "@rules_rust//ffi/rs:empty_allocator_libraries",
    }),
    edition = "2018",
    rustc_flags = _STRIP_FLAGS,
    visibility = ["//visibility:public"],
    deps = [
        ":process_wrapper_lib",
    ],
)

rust_test_without_process_wrapper_test(
    name = "process_wrapper_test",
    crate = ":process_wrapper",
    edition = "2018",
)

bootstrap_process_wrapper(
    name = "bootstrap_process_wrapper",
    is_windows = select({
        "@platforms//os:windows": True,
        "//conditions:default": False,
    }),
    visibility = ["//visibility:public"],
)
