load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("//rust:defs.bzl", "rust_binary")

bzl_library(
    name = "bzl_lib",
    srcs = [
        "transitions.bzl",
        "wasm_bindgen.bzl",
    ],
    visibility = ["//wasm_bindgen:__pkg__"],
)

rust_binary(
    name = "wasm_bindgen_test_runner",
    srcs = ["wasm_bindgen_test_runner.rs"],
    edition = "2021",
    visibility = ["//visibility:public"],
    deps = ["//tools/runfiles"],
)
